<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/layout_activityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="11pt" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/movie_title"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="135dp"
            android:layout_height="wrap_content"

            android:text="@string/genre"
            android:textSize="11pt" />

        <Spinner
            android:id="@+id/spGenre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:entries="@array/genre"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="11pt" />

        <SeekBar
            android:id="@+id/sbDuration"
            android:layout_width="0dp"
            android:min="60"
            android:max="240"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11pt"
            android:text="@string/release_date"
            android:layout_gravity="center" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:layout_gravity="center"
            android:paddingRight="15dp"/>

        <Button
            android:id="@+id/btnRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_release_date" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="308dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_json"
        android:onClick="readJson"/>

    <Button
        android:id="@+id/btnBarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_chart"
        android:onClick="viewChart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_movie" />
    </LinearLayout>
</LinearLayout>